[gd_scene load_steps=10 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://InfoCenter.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 14.0
content_margin_bottom = 14.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.909804, 0.619608, 0.168627, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 4

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.909804, 0.619608, 0.168627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.00784314, 0.137255, 0.290196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.909804, 0.619608, 0.168627, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[node name="Grid" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameBox" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 119.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.67451, 0.223529, 1 )
text = "test
asdm,asd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 1024.0
margin_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="imgbox" type="TextureRect" parent="VBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="FactBox" type="Label" parent="VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Welcome! This district is known for"
autowrap = true

[node name="MarginContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 149.0
margin_right = 1024.0
margin_bottom = 298.0
custom_constants/separation = 10

[node name="Neighbours" type="Button" parent="VBoxContainer2/MarginContainer"]
margin_right = 1024.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Neighbours"

[node name="history" type="Button" parent="VBoxContainer2/MarginContainer"]
margin_top = 53.0
margin_right = 1024.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "History"

[node name="clue" type="Button" parent="VBoxContainer2/MarginContainer"]
visible = false
margin_top = 106.0
margin_right = 1024.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.8, 0.0666667, 1 )
text = "Clue"

[node name="Back" type="Button" parent="VBoxContainer2/MarginContainer"]
margin_top = 106.0
margin_right = 1024.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Close"

[connection signal="pressed" from="VBoxContainer2/MarginContainer/Neighbours" to="." method="_on_Neighbours_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/history" to="." method="_on_history_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/clue" to="." method="_on_clue_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/Back" to="." method="_on_Back_pressed"]
